// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionLink renders active 1`] = `
<DocumentFragment>
  <span
    class="__CollectionLink__ mh4 m-mh2"
  >
    <a
      class="link f5 white active"
      href="/literature"
    />
  </span>
</DocumentFragment>
`;

exports[`CollectionLink renders active and new 1`] = `
<DocumentFragment>
  <span
    class="__CollectionLink__ mh4 m-mh2"
  >
    <a
      class="link f5 white active"
      href="/literature"
    />
    <span
      class="ant-tag ant-tag-has-color __NewFeatureTag__"
      style="background-color: rgb(82, 196, 26);"
    >
      New
    </span>
  </span>
</DocumentFragment>
`;

exports[`CollectionLink renders default 1`] = `
<DocumentFragment>
  <span
    class="__CollectionLink__ mh4 m-mh2"
  >
    <a
      class="link f5 white"
      href="/literature"
    />
  </span>
</DocumentFragment>
`;

exports[`CollectionLink renders new 1`] = `
<DocumentFragment>
  <span
    class="__CollectionLink__ mh4 m-mh2"
  >
    <a
      class="link f5 white"
      href="/literature"
    />
    <span
      class="ant-tag ant-tag-has-color __NewFeatureTag__"
      style="background-color: rgb(82, 196, 26);"
    >
      New
    </span>
  </span>
</DocumentFragment>
`;
